--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-uglify": "latest"
   },
   "dependencies": {
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "jquery-ui-dist": "^1.12.1"
   }
 }
