--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jquery-ui-dist": "^1.12.1"
   },
   "devDependencies": {
+    "@angular/cli": "^1.0.0-beta.31",
     "@angular/compiler-cli": "^2.3.1",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
