--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.1.1",
+    "jquery-ui-dist": "^1.12.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.2",
-    "jquery": "^3.1.1",
-    "jquery-ui-dist": "^1.12.1"
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {
     "@angular/cli": "^1.0.0-beta.31",
