--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
     "@types/hammerjs": "^2.0.34",
+    "angulartics2": "^1.6.3",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.1.1",
